provided unit test for testing an imported policy is only loaded once by using cache
* also made sure that invalidation triggered by change of an imported policy only invalidates the cache entry once
* fixed ordering of `allReferencedPolicies` in Metadata by using a LinkedHashSet

Signed-off-by: Thomas Jäckle <thomas.jaeckle@beyonnex.io>